[gd_scene load_steps=2 format=3 uid="uid://cf5tynh11ylo2"]

[ext_resource type="Script" path="res://script/control.gd" id="1_dnvfw"]

[node name="SkillTree" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dnvfw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 644.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 328.0
offset_top = 218.0
offset_right = 844.0
offset_bottom = 457.0

[node name="SpeedButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade Speed"
alignment = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/SpeedButton"]
layout_mode = 2
offset_left = 1.0
offset_top = 3.0
offset_right = 517.0
offset_bottom = 26.0
text = "Current Speed: 0"
horizontal_alignment = 2

[node name="JumpButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade Jump"
alignment = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/JumpButton"]
layout_mode = 2
offset_top = 2.0
offset_right = 516.0
offset_bottom = 25.0
text = "Current Jump Level: 0"
horizontal_alignment = 2

[node name="AttackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade Attack"
alignment = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/AttackButton"]
layout_mode = 2
offset_top = 3.0
offset_right = 516.0
offset_bottom = 26.0
text = "Current Attack Level: 0"
horizontal_alignment = 2

[node name="HealthButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade Health"
alignment = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HealthButton"]
layout_mode = 2
offset_left = -1.0
offset_top = 2.0
offset_right = 515.0
offset_bottom = 25.0
text = "Current Health Level: 0"
horizontal_alignment = 2

[node name="SkillPoints" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 328.0
offset_top = 489.0
offset_right = 844.0
offset_bottom = 512.0
text = "Skill Points Remaining: 1
"

[node name="Close" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 582.0
offset_top = 521.0
offset_right = 632.0
offset_bottom = 552.0
text = "Close
"

[connection signal="pressed" from="Panel/VBoxContainer/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/JumpButton" to="." method="_on_jump_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HealthButton" to="." method="_on_health_button_pressed"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
